--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,11 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.show-sql=true
 spring.jpa.show-sql=true
+#spring.datasource.url=jdbc:postgresql://localhost:5432/ecom_product
+#spring.datasource.url=user-service-db.czo80k4gc50u.ap-southeast-2.rds.amazonaws.com/ecom_product
 spring.datasource.url=jdbc:postgresql://localhost:5432/ecom_product
+#spring.datasource.username=userservice
+#spring.datasource.password=password
 spring.datasource.username=postgres
 spring.datasource.password=password
+logging.level.org.springframework.security=trace
